link stylesheet to save eyes from bright white

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Webpage Recreation Practice</title>
   <script src="js/scripts.js"></script>
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
   <h1>Favorite Things!</h1>
